--- a/book/contact.ipynb
+++ b/book/contact.ipynb
@@ -14,7 +14,7 @@
    "id": "633aa5e2",
    "metadata": {},
    "source": [
-    "Hieronder zijn mijn contact gegevens: "
+    "Mijn contactgegevens zijn hieronder te vinden: "
    ]
   },
   {
